--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <!-- بخش هیرو با اسلایدر -->
     <section class="hero-section">
         <div class="carousel">
-            <div class="carousel-item active" style="background-image: url('https://raw.githubusercontent.com/roghayeh-asn/atiye-derakhshan/main/photo_%DB%B2%DB%B0%DB%B2%DB%B5-%DB%B0%DB%B9-%DB%B1%DB%B1_%DB%B2%DB%B1-%DB%B3%DB%B6-%DB%B4%DB%B8.jpg');"></div>
+            <div class="carousel-item active" style="background-image: url('https://raw.githubusercontent.com/roghayeh-asn/atiye-derakhshan/main/photo_%DB%B2%DB%B0%DB%B2%DB%B5-%DB%B0%DB%B9-%DB%B1%DB%B1_%DB%B2%DB%B1-%DB%B3%DB%CDB4-%DB%B4%DB%B8.jpg');"></div>
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/1200x500?text=کتاب‌های+آموزشی')"></div>
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/1200x500?text=کلاس‌های+آتیه+درخشان')"></div>
             <div class="carousel-controls">
@@ -474,7 +474,7 @@
         <div class="container mx-auto px-6 text-center">
             <p class="text-lg mb-4">آتیه درخشان، مسیر موفقیت تو</p>
             <p class="text-md mb-2">سهند، فاز دو، نبش میدان معلم، مجتمع تجاری جواهر، طبقه دوم</p>
-            <p class="text-md mb-4">تلفن: 09144277240 - 09394713666</p>
+            <p class="text-md mb-4">تلفن: 09144277240 - 09394713666</</p>
             <div class="flex justify-center gap-6">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
