--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
                 <div class="dropdown">
-                    <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده دوره‌های آموزشی">دوره‌ها</a>
+                    <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده فیلم‌های آموزشی">فیلم‌های آموزشی</a>
                     <div class="dropdown-menu">
                         <a href="courses.html#math">ریاضی پیشرفته</a>
                         <a href="courses.html#science">علوم تجربی</a>
@@ -474,11 +474,11 @@
         <div class="container mx-auto px-6 text-center">
             <p class="text-lg mb-4">آتیه درخشان، مسیر موفقیت تو</p>
             <p class="text-md mb-2">سهند، فاز دو، نبش میدان معلم، مجتمع تجاری جواهر، طبقه دوم</p>
-            <p class="text-md mb-4">تلفن: 09144277240 - 09394713666</</p>
+            <p class="text-md mb-4">تلفن: 09144277240 - 09394713666</p>
             <div class="flex justify-center gap-6">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
-                <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">دوره‌ها</a>
+                <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
