--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دوره‌های آموزشی آتیه درخشان</title>
+    <title>فیلم‌های آموزشی آتیه درخشان</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -168,7 +168,7 @@
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
                 <div class="dropdown">
-                    <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده دوره‌های آموزشی">دوره‌ها</a>
+                    <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده فیلم‌های آموزشی">فیلم‌های آموزشی</a>
                     <div class="dropdown-menu">
                         <a href="#math">ریاضی پیشرفته</a>
                         <a href="#science">علوم تجربی</a>
@@ -191,43 +191,43 @@
         </div>
     </nav>
 
-    <!-- بخش دوره‌ها -->
+    <!-- بخش فیلم‌های آموزشی -->
     <section class="py-16">
         <div class="container mx-auto px-6">
-            <h2 class="section-title">دوره‌های آموزشی آتیه درخشان</h2>
+            <h2 class="section-title">فیلم‌های آموزشی آتیه درخشان</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="course-card" id="math">
-                    <h3>دوره ریاضی پیشرفته</h3>
+                    <h3>فیلم آموزشی ریاضی پیشرفته</h3>
                     <p>این دوره با تمرکز بر مفاهیم عمیق ریاضی و حل مسائل پیشرفته، شما را برای کنکور و المپیادها آماده می‌کند. شامل تمرین‌های عملی و آموزش توسط اساتید مجرب.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_math" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="science">
-                    <h3>دوره علوم تجربی</h3>
+                    <h3>فیلم آموزشی علوم تجربی</h3>
                     <p>یادگیری جامع زیست، شیمی و فیزیک با روش‌های تعاملی و آزمایشگاهی. مناسب برای دانش‌آموزانی که به دنبال تسلط کامل بر علوم هستند.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_science" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="english">
-                    <h3>دوره زبان انگلیسی</h3>
+                    <h3>فیلم آموزشی زبان انگلیسی</h3>
                     <p>دوره‌ای برای تقویت مهارت‌های چهارگانه زبان با تمرکز بر گرامر، واژگان و مکالمه. مناسب برای کنکور و مهاجرت.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_english" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="physics">
-                    <h3>دوره فیزیک</h3>
+                    <h3>فیلم آموزشی فیزیک</h3>
                     <p>دوره‌ای تخصصی برای تسلط بر مفاهیم فیزیک با تمرکز بر حل مسائل عملی و آمادگی برای کنکور و المپیاد.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_physics" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="chemistry">
-                    <h3>دوره شیمی</h3>
+                    <h3>فیلم آموزشی شیمی</h3>
                     <p>یادگیری عمیق مفاهیم شیمی با آزمایش‌های عملی و آموزش‌های پیشرفته برای موفقیت در کنکور و تحصیلات تکمیلی.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_chemistry" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="tizhooshan">
-                    <h3>دوره تیزهوشان</h3>
+                    <h3>فیلم آموزشی تیزهوشان</h3>
                     <p>دوره‌ای ویژه برای دانش‌آموزان تیزهوش با تمرکز بر پرورش خلاقیت و آمادگی برای آزمون‌های تیزهوشان.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_tizhooshan" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
@@ -245,7 +245,7 @@
             <div class="flex justify-center gap-6">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
-                <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">دوره‌ها</a>
+                <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
