--- a/about-us.html
+++ b/about-us.html
@@ -132,7 +132,7 @@
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
                 <div class="dropdown">
-                    <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده دوره‌های آموزشی">دوره‌ها</a>
+                    <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده فیلم‌های آموزشی">فیلم‌های آموزشی</a>
                     <div class="dropdown-menu">
                         <a href="courses.html#math">ریاضی پیشرفته</a>
                         <a href="courses.html#science">علوم تجربی</a>
@@ -228,7 +228,7 @@
             <div class="flex justify-center gap-6">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
-                <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">دوره‌ها</a>
+                <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
