--- a/courses.html
+++ b/courses.html
@@ -170,8 +170,8 @@
                 <div class="dropdown">
                     <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده فیلم‌های آموزشی">فیلم‌های آموزشی</a>
                     <div class="dropdown-menu">
-                        <a href="#math">ریاضی پیشرفته</a>
-                        <a href="#science">علوم تجربی</a>
+                        <a href="#math">ریاضی</a>
+                        <a href="#science">زیست</a>
                         <a href="#english">زبان انگلیسی</a>
                         <a href="#physics">فیزیک</a>
                         <a href="#chemistry">شیمی</a>
@@ -197,13 +197,13 @@
             <h2 class="section-title">فیلم‌های آموزشی آتیه درخشان</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="course-card" id="math">
-                    <h3>فیلم آموزشی ریاضی پیشرفته</h3>
+                    <h3>فیلم آموزشی ریاضی</h3>
                     <p>این دوره با تمرکز بر مفاهیم عمیق ریاضی و حل مسائل پیشرفته، شما را برای کنکور و المپیادها آماده می‌کند. شامل تمرین‌های عملی و آموزش توسط اساتید مجرب.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_math" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="science">
-                    <h3>فیلم آموزشی علوم تجربی</h3>
+                    <h3>فیلم آموزشی زیست</h3>
                     <p>یادگیری جامع زیست، شیمی و فیزیک با روش‌های تعاملی و آزمایشگاهی. مناسب برای دانش‌آموزانی که به دنبال تسلط کامل بر علوم هستند.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_science" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
