--- a/about-us.html
+++ b/about-us.html
@@ -134,8 +134,8 @@
                 <div class="dropdown">
                     <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده فیلم‌های آموزشی">فیلم‌های آموزشی</a>
                     <div class="dropdown-menu">
-                        <a href="courses.html#math">ریاضی پیشرفته</a>
-                        <a href="courses.html#science">علوم تجربی</a>
+                        <a href="courses.html#math">ریاضی</a>
+                        <a href="courses.html#science">زیست</a>
                         <a href="courses.html#english">زبان انگلیسی</a>
                         <a href="courses.html#physics">فیزیک</a>
                         <a href="courses.html#chemistry">شیمی</a>
