--- a/courses.html
+++ b/courses.html
@@ -200,7 +200,7 @@
                     <h3>فیلم آموزشی ریاضی</h3>
                     <p>این دوره با تمرکز بر مفاهیم عمیق ریاضی و حل مسائل پیشرفته، شما را برای کنکور و المپیادها آماده می‌کند. شامل تمرین‌های عملی و آموزش توسط اساتید مجرب.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
-                    <a href="https://www.youtube.com/watch?v=example_math" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
+                    <a href="https://caspian18.cdn.asset.aparat.com/aparat-video/9bf69d5abaf3917b91a9c9d7a5ae0b7a61450643-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6ImM4ZjRlZjBmYjBmYTgyNjM0YWEzZGMxN2UxMTkxZjljIiwiZXhwIjoxNzU5NjY4ODkwLCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.FEKJOP-fWkX93Q3HxJKeOiQ3p4-nSaOyOQkdSoUQdwk" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="science">
                     <h3>فیلم آموزشی زیست</h3>
