--- a/courses.html
+++ b/courses.html
@@ -92,7 +92,7 @@
             margin-bottom: 1.5rem;
             text-align: justify;
         }
-        .btn-register, .btn-video {
+        .btn-register, .btn-video, .btn-aparat {
             padding: 10px 20px;
             border-radius: 50px;
             font-weight: 600;
@@ -119,6 +119,16 @@
             background: linear-gradient(90deg, #a855f7, #7e22ce);
             transform: scale(1.1);
             box-shadow: 0 0 15px rgba(126, 34, 206, 0.5);
+        }
+        .btn-aparat {
+            background: linear-gradient(90deg, #ed1c24, #ff4d4f);
+            color: #fff;
+            border: 2px solid #fff;
+        }
+        .btn-aparat:hover {
+            background: linear-gradient(90deg, #ff4d4f, #ed1c24);
+            transform: scale(1.1);
+            box-shadow: 0 0 15px rgba(237, 28, 36, 0.5);
         }
         .footer {
             background: linear-gradient(90deg, #1e40af, #60a5fa);
@@ -232,6 +242,10 @@
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://caspian19.cdn.asset.aparat.com/aparat-video/ae7554b24f19f5375cfce4571ee8483661320214-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6ImQ2YTAzMzJhNGY1MDM0YzM0MDQxMDk5ZTYyNzk5NjM4IiwiZXhwIjoxNzU5NjY4OTAzLCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.-vXgPjehKk0XeGtUIfZ5swLumMcnBzmifRzE4aLs6IM" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
+            </div>
+            <div class="text-center mt-8">
+                <p class="text-lg text-gray-700 mb-4">برای دیدن فیلم‌های بیشتر به کانال آپارات ما سر بزنید</p>
+                <a href="https://www.aparat.com/Atiyeh_derakhshan/videos" target="_blank" class="btn-aparat inline-block">مشاهده کانال آپارات</a>
             </div>
         </div>
     </section>
