--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     <!-- هدر و منوی ناوبری -->
     <nav class="navbar shadow-lg">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-white text-3xl font-extrabold">آتیه درخشان</a>
+            <a href="index.html" class="text-white text-3xl font-extrabold">آموزشگاه علمی آتیه درخشان</a>
             <div class="space-x-6 space-x-reverse flex items-center">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
@@ -382,7 +382,7 @@
             </div>
         </div>
         <div class="hero-content">
-            <h1>آینده‌ات را درخشان کن!</h1>
+            <h1>آینده‌ات را  با آتیه درخشان ،درخشان کن!</h1>
             <p>با بهترین آموزش‌ها، موفقیت در انتظار توست</p>
             <a href="#resources" class="btn-primary mt-6 inline-block">شروع یادگیری</a>
         </div>
