--- a/index.html
+++ b/index.html
@@ -352,13 +352,7 @@
                         <a href="courses.html#tizhooshan">تیزهوشان</a>
                     </div>
                 </div>
-                <div class="dropdown">
-                    <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده اطلاعات مدرسان">مدرسان</span>
-                    <div class="dropdown-menu">
-                        <a href="teachers-list.html">لیست اساتید</a>
-                        <a href="teacher-profiles.html">پروفایل‌ها</a>
-                    </div>
-                </div>
+                <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">مدرسان</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300 text-lg">تماس با ما</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300 text-lg">وبلاگ</a>
             </div>
@@ -372,8 +366,8 @@
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/1200x500?text=کتاب‌های+آموزشی')"></div>
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/1200x500?text=کلاس‌های+آتیه+درخشان')"></div>
             <div class="carousel-controls">
-                <button onclick="showPrevSlide()" class="prev"><i class="fas fa-chevron-right"></i></button>
-                <button onclick="showNextSlide()" class="next"><i class="fas fa-chevron-left"></i></button>
+                <button onclick="showPrevSlide()" class="prev" aria-label="اسلاید قبلی"><i class="fas fa-chevron-right"></i></button>
+                <button onclick="showNextSlide()" class="next" aria-label="اسلاید بعدی"><i class="fas fa-chevron-left"></i></button>
             </div>
             <div class="carousel-indicators">
                 <span class="active" onclick="currentSlide(0)"></span>
@@ -427,7 +421,7 @@
                 <p class="text-lg text-gray-700 mb-6 leading-relaxed">
                     تیم ما شامل اساتید مجرب و با انگیزه است که با سال‌ها تجربه و روش‌های نوین، دانش‌آموزان را به سوی موفقیت هدایت می‌کنند.
                 </p>
-                <a href="#" class="btn-primary">معرفی اساتید</a>
+                <a href="instructors.html" class="btn-primary">معرفی اساتید</a>
             </div>
         </div>
     </section>
@@ -479,6 +473,7 @@
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
                 <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
+                <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300">مدرسان</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
