--- a/courses.html
+++ b/courses.html
@@ -173,7 +173,7 @@
     <!-- هدر و منوی ناوبری -->
     <nav class="navbar shadow-lg">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-white text-3xl font-extrabold">آتیه درخشان</a>
+            <a href="index.html" class="text-white text-3xl font-extrabold">آموزشگاه علمی آتیه درخشان</a>
             <div class="space-x-6 space-x-reverse flex items-center">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
@@ -188,13 +188,7 @@
                         <a href="#tizhooshan">تیزهوشان</a>
                     </div>
                 </div>
-                <div class="dropdown">
-                    <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده اطلاعات مدرسان">مدرسان</span>
-                    <div class="dropdown-menu">
-                        <a href="teachers-list.html">لیست اساتید</a>
-                        <a href="teacher-profiles.html">پروفایل‌ها</a>
-                    </div>
-                </div>
+                <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">مدرسان</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300 text-lg">تماس با ما</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300 text-lg">وبلاگ</a>
             </div>
@@ -260,6 +254,7 @@
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
                 <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
+                <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300">مدرسان</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
