--- a/instructors.html
+++ b/instructors.html
@@ -3,25 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مدرسان آموزشگاه کنکور</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <title>مدرسان آموزشگاه آتیه درخشان</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
-        @import url('https://v1.fontapi.ir/css/Vazir');
-        body { font-family: 'Vazir', sans-serif; }
-        .instructor-card { transition: transform 0.3s ease, box-shadow 0.3s ease; }
-        .instructor-card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
-        .header-bg { background: linear-gradient(135deg, #1e3a8a, #3b82f6); }
-        .footer-bg { background: linear-gradient(135deg, #1f2937, #4b5563); }
-        .btn-primary { transition: background-color 0.3s ease; }
-        .btn-primary:hover { background-color: #2563eb; }
+        @font-face {
+            font-family: 'Vazir';
+            src: url('https://cdn.fontcdn.ir/Fonts/Vazir/Vazir.woff') format('woff');
+        }
+        body {
+            font-family: 'Vazir', sans-serif;
+            background: linear-gradient(135deg, #fff7ed 0%, #e0f2fe 100%);
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
+        html {
+            scroll-behavior: smooth;
+        }
+        .navbar {
+            background: linear-gradient(90deg, #1e40af, #60a5fa);
+            padding: 1rem 2rem;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        .navbar a, .navbar .dropdown-toggle {
+            transition: all 0.3s ease;
+            color: #fff;
+            font-weight: 500;
+        }
+        .navbar a:hover, .navbar .dropdown-toggle:hover {
+            color: #ffd700;
+            transform: translateY(-2px);
+        }
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            background: #60a5fa;
+            min-width: 180px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            right: 0;
+            animation: fadeIn 0.3s ease-in;
+        }
+        .dropdown:hover .dropdown-menu {
+            display: block;
+        }
+        .dropdown-menu a {
+            color: #fff;
+            padding: 12px 16px;
+            transition: background 0.3s ease;
+        }
+        .dropdown-menu a:hover {
+            background: #3b82f6;
+        }
+        .instructor-card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background: linear-gradient(145deg, #ffffff, #f3e8ff);
+            border-radius: 12px;
+            padding: 20px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            border: 2px solid #7e22ce;
+        }
+        .instructor-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 12px 25px rgba(126, 34, 206, 0.3);
+            border-color: #a855f7;
+        }
+        .header-bg {
+            background: linear-gradient(135deg, #1e3a8a, #3b82f6);
+        }
+        .btn-primary {
+            background: linear-gradient(90deg, #3b82f6, #1e40af);
+            color: #fff;
+            font-weight: 600;
+            padding: 12px 30px;
+            border-radius: 50px;
+            border: 2px solid #fff;
+            transition: all 0.4s ease;
+        }
+        .btn-primary:hover {
+            background: linear-gradient(90deg, #1e40af, #3b82f6);
+            transform: scale(1.1);
+            box-shadow: 0 0 20px rgba(59, 130, 246, 0.6);
+        }
+        .footer {
+            background: linear-gradient(90deg, #1e40af, #60a5fa);
+            padding: 2rem 0;
+            color: #fff;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @media (max-width: 768px) {
+            .instructor-card {
+                padding: 15px;
+            }
+        }
+        @media (max-width: 480px) {
+            .instructor-card {
+                padding: 12px;
+            }
+        }
     </style>
 </head>
-<body class="bg-gray-50">
+<body>
+    <!-- هدر و منوی ناوبری -->
+    <nav class="navbar shadow-lg">
+        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <a href="index.html" class="text-white text-3xl font-extrabold">آموزشگاه علمی آتیه درخشان</a>
+            <div class="space-x-6 space-x-reverse flex items-center">
+                <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
+                <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
+                <div class="dropdown">
+                    <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده فیلم‌های آموزشی">فیلم‌های آموزشی</a>
+                    <div class="dropdown-menu">
+                        <a href="courses.html#math">ریاضی</a>
+                        <a href="courses.html#science">زیست</a>
+                        <a href="courses.html#english">زبان انگلیسی</a>
+                        <a href="courses.html#physics">فیزیک</a>
+                        <a href="courses.html#chemistry">شیمی</a>
+                        <a href="courses.html#tizhooshan">تیزهوشان</a>
+                    </div>
+                </div>
+                <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">مدرسان</a>
+                <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300 text-lg">تماس با ما</a>
+                <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300 text-lg">وبلاگ</a>
+            </div>
+        </div>
+    </nav>
+
     <!-- Header -->
     <header class="header-bg text-white py-8">
         <div class="container mx-auto px-4 text-center">
-            <h1 class="text-4xl md:text-5xl font-bold mb-3 animate-fade-in">مدرسان برجسته آموزشگاه کنکور</h1>
+            <h1 class="text-4xl md:text-5xl font-bold mb-3">مدرسان برجسته آموزشگاه آتیه درخشان</h1>
             <p class="text-lg md:text-xl">با برترین اساتید کنکور به سوی موفقیت گام بردارید</p>
         </div>
     </header>
@@ -81,20 +199,18 @@
         <div class="container mx-auto px-4">
             <h2 class="text-2xl md:text-3xl font-bold mb-4">آماده فتح کنکور هستید؟</h2>
             <p class="text-lg mb-6">با بهترین اساتید ما به رتبه‌های برتر دست پیدا کنید!</p>
-            <a href="#" class="inline-block bg-white text-blue-600 py-3 px-8 rounded-lg font-semibold hover:bg-gray-200 transition duration-300">ثبت‌نام در دوره‌های کنکور</a>
+            <a href="#register" class="inline-block btn-primary">ثبت‌نام در دوره‌های کنکور</a>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer-bg text-white py-8">
-        <div class="container mx-auto px-4 text-center">
-            <p class="text-lg">تمامی حقوق برای آموزشگاه کنکور محفوظ است. &copy; ۱۴۰۴</p>
-            <div class="mt-4 flex justify-center space-x-4">
-                <a href="#" class="text-white hover:text-blue-300"><i class="fab fa-telegram-plane text-xl"></i></a>
-                <a href="#" class="text-white hover:text-blue-300"><i class="fab fa-instagram text-xl"></i></a>
-                <a href="#" class="text-white hover:text-blue-300"><i class="fab fa-whatsapp text-xl"></i></a>
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
+    <!-- فوتر -->
+    <footer class="footer text-white py-8">
+        <div class="container mx-auto px-6 text-center">
+            <p class="text-lg mb-4">آتیه درخشان، مسیر موفقیت تو</p>
+            <p class="text-md mb-2">سهند، فاز دو، نبش میدان معلم، مجتمع تجاری جواهر، طبقه دوم</p>
+            <p class="text-md mb-4">تلفن: 09144277240 - 09394713666</p>
+            <div class="flex justify-center gap-6">
+                <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
+                <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
+                <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
+                <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300">مدرسان
