--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                     </div>
                 </div>
                 <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">مدرسان</a>
-                <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300 text-lg">تماس با ما</a>
+                <a href="register.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">ثبت‌نام</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300 text-lg">وبلاگ</a>
             </div>
         </div>
@@ -378,7 +378,7 @@
         <div class="hero-content">
             <h1>آینده‌ات را  با آتیه درخشان ،درخشان کن!</h1>
             <p>با بهترین آموزش‌ها، موفقیت در انتظار توست</p>
-            <a href="#resources" class="btn-primary mt-6 inline-block">شروع یادگیری</a>
+            <a href="register.html" class="btn-primary mt-6 inline-block">شروع یادگیری</a>
         </div>
     </section>
 
@@ -398,7 +398,7 @@
             <div class="resource-card">
                 <h3><i class="fas fa-video"></i> ویدئوهای آموزشی</h3>
                 <p>دسترسی به مجموعه‌ای از ویدئوهای آموزشی باکیفیت برای دروس ریاضی، فیزیک، شیمی و زیست. این ویدئوها توسط اساتید مجرب تهیه شده‌اند و به شما کمک می‌کنند مفاهیم پیچیده را به‌راحتی درک کنید.</p>
-                <a href="https://www.youtube.com/playlist?list=PLexample" target="_blank">مشاهده ویدئوها</a>
+                <a href="courses.html" target="_blank">مشاهده ویدئوها</a>
             </div>
             <div class="resource-card">
                 <h3><i class="fas fa-book"></i> کتابخانه آنلاین</h3>
@@ -474,7 +474,7 @@
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
                 <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
                 <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300">مدرسان</a>
-                <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
+                <a href="register.html" class="text-white hover:text-yellow-200 transition duration-300">ثبت‌نام</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
             <p class="mt-6 text-sm">© 1404 آموزشگاه آتیه درخشان - تمامی حقوق محفوظ است</p>
