--- a/about-us.html
+++ b/about-us.html
@@ -143,7 +143,7 @@
                     </div>
                 </div>
                 <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">مدرسان</a>
-                <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300 text-lg">تماس با ما</a>
+                <a href="register.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">ثبت‌نام</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300 text-lg">وبلاگ</a>
             </div>
         </div>
@@ -224,7 +224,7 @@
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
                 <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
                 <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300">مدرسان</a>
-                <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
+                <a href="register.html" class="text-white hover:text-yellow-200 transition duration-300">ثبت‌نام</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
             <p class="mt-6 text-sm">© 1404 آموزشگاه آتیه درخشان - تمامی حقوق محفوظ است</p>
