--- a/courses.html
+++ b/courses.html
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">مدرسان</a>
-                <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300 text-lg">تماس با ما</a>
+                <a href="register.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">ثبت‌نام</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300 text-lg">وبلاگ</a>
             </div>
         </div>
@@ -203,37 +203,37 @@
                 <div class="course-card" id="math">
                     <h3>فیلم آموزشی ریاضی</h3>
                     <p>این دوره با تمرکز بر مفاهیم عمیق ریاضی و حل مسائل پیشرفته، شما را برای کنکور و المپیادها آماده می‌کند. شامل تمرین‌های عملی و آموزش توسط اساتید مجرب.</p>
-                    <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
+                    <a href="register.html" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://caspian18.cdn.asset.aparat.com/aparat-video/9bf69d5abaf3917b91a9c9d7a5ae0b7a61450643-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6ImM4ZjRlZjBmYjBmYTgyNjM0YWEzZGMxN2UxMTkxZjljIiwiZXhwIjoxNzU5NjY4ODkwLCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.FEKJOP-fWkX93Q3HxJKeOiQ3p4-nSaOyOQkdSoUQdwk" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="science">
                     <h3>فیلم آموزشی زیست</h3>
                     <p>یادگیری جامع زیست، شیمی و فیزیک با روش‌های تعاملی و آزمایشگاهی. مناسب برای دانش‌آموزانی که به دنبال تسلط کامل بر علوم هستند.</p>
-                    <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
+                    <a href="register.html" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://persian17.cdn.asset.aparat.com/aparat-video/2e94c273af23ebc8b8f8b5d986c91f9061302410-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6IjU3ZTgzOTg5NGFjNDNhYzVjNGEwYmZjMTdmNGRjYmYxIiwiZXhwIjoxNzU5NjY4OTE2LCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.wOyoESm-AZZW0oeI7UjkLUTGQ3L3z4avBVUfeqSiA_U" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="english">
                     <h3>فیلم آموزشی زبان انگلیسی</h3>
                     <p>دوره‌ای برای تقویت مهارت‌های چهارگانه زبان با تمرکز بر گرامر، واژگان و مکالمه. مناسب برای کنکور و مهاجرت.</p>
-                    <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
+                    <a href="register.html" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_english" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="physics">
                     <h3>فیلم آموزشی فیزیک</h3>
                     <p>دوره‌ای تخصصی برای تسلط بر مفاهیم فیزیک با تمرکز بر حل مسائل عملی و آمادگی برای کنکور و المپیاد.</p>
-                    <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
+                    <a href="register.html" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://persian20.cdn.asset.aparat.com/aparat-video/bdd80152ebda3de2de4b40c030a52e4161579688-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6ImE0ZTU1YmEwNWJlMGE2OTZhNTU3MjAzOGFiMWZlZTllIiwiZXhwIjoxNzU5NjY5MzUyLCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.cIlAXVAEz2aPzmIv6-kqSF-8DWZPOsZA3z5BgIUx91c" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="chemistry">
                     <h3>فیلم آموزشی شیمی</h3>
                     <p>یادگیری عمیق مفاهیم شیمی با آزمایش‌های عملی و آموزش‌های پیشرفته برای موفقیت در کنکور و تحصیلات تکمیلی.</p>
-                    <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
+                    <a href="register.html" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://persian18.cdn.asset.aparat.com/aparat-video/aa3f9fbe267c99a67cfc0593c1a7407261450049-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6IjdkYjVlODk3NzQ2N2Q0ODg1ZWM1MDY5NmUxMTkwODViIiwiZXhwIjoxNzU5NjY4OTAxLCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.3WhjE_Cgb8IdumvnRuCRkmVIJIDx3ilY2MA3QaNwBic" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card" id="tizhooshan">
                     <h3>فیلم آموزشی تیزهوشان</h3>
                     <p>دوره‌ای ویژه برای دانش‌آموزان تیزهوش با تمرکز بر پرورش خلاقیت و آمادگی برای آزمون‌های تیزهوشان.</p>
-                    <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
+                    <a href="register.html" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://caspian19.cdn.asset.aparat.com/aparat-video/ae7554b24f19f5375cfce4571ee8483661320214-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6ImQ2YTAzMzJhNGY1MDM0YzM0MDQxMDk5ZTYyNzk5NjM4IiwiZXhwIjoxNzU5NjY4OTAzLCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.-vXgPjehKk0XeGtUIfZ5swLumMcnBzmifRzE4aLs6IM" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
             </div>
@@ -255,7 +255,7 @@
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
                 <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">فیلم‌های آموزشی</a>
                 <a href="instructors.html" class="text-white hover:text-yellow-200 transition duration-300">مدرسان</a>
-                <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
+                <a href="register.html" class="text-white hover:text-yellow-200 transition duration-300">ثبت‌نام</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
             <p class="mt-6 text-sm">© 1404 آموزشگاه آتیه درخشان - تمامی حقوق محفوظ است</p>
