--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <h2 class="text-4xl font-extrabold text-blue-800 mb-8">ثبت‌نام دوره‌های جدید آغاز شد!</h2>
             <video height="240" controls>
                 <source src="https://www.aparat.com/v/tfyj27b?refererRef=channel_page" type="video/mp4">
-                مرورگرت از ویدئو پشتیبانی نمی‌کنه. لطفاً از آپارات استفاده کن: <a href="https://www.aparat.com/v/tfyj27b?refererRef=channel_page">لینک آپارات</a>
+                مرورگرت از ویدئو پشتیبانی نمی‌کنه. لطفاً از آپارات استفاده کن: <a href="https://www.namasha.com/v/IDHjUGBL">لینک آپارات</a>
             </video>
             <p class="mt-6 text-gray-600 max-w-2xl mx-auto">با پیوستن به دوره‌های جدید، از آموزش‌های تخصصی و به‌روز اساتید ما بهره‌مند شوید و گام بلندی به سوی موفقیت تحصیلی بردارید!</p>
         </div>
