--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-4xl font-extrabold text-blue-800 mb-8">ثبت‌نام دوره‌های جدید آغاز شد!</h2>
             <video height="240" controls>
-                <source src="https://www.aparat.com/v/tfyj27b?refererRef=channel_page" type="video/mp4">
-                مرورگرت از ویدئو پشتیبانی نمی‌کنه. لطفاً از آپارات استفاده کن: <a href="https://www.namasha.com/v/IDHjUGBL">لینک آپارات</a>
+                <source src="https://www.aparat.com/embed/tfyj27b?data[rnddiv]=25643559690&data[responsive]=yes" type="video/mp4">
+                مرورگرت از ویدئو پشتیبانی نمی‌کنه. لطفاً از آپارات استفاده کن: <a href="https://www.aparat.com/embed/tfyj27b?data[rnddiv]=25643559690&data[responsive]=yes">لینک آپارات</a>
             </video>
             <p class="mt-6 text-gray-600 max-w-2xl mx-auto">با پیوستن به دوره‌های جدید، از آموزش‌های تخصصی و به‌روز اساتید ما بهره‌مند شوید و گام بلندی به سوی موفقیت تحصیلی بردارید!</p>
         </div>
