--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-4xl font-extrabold text-blue-800 mb-8">ثبت‌نام دوره‌های جدید آغاز شد!</h2>
             <video height="240" controls>
-                <source src="https://www.aparat.com/embed/tfyj27b?data[rnddiv]=25643559690&data[responsive]=yes" type="video/mp4">
-                مرورگرت از ویدئو پشتیبانی نمی‌کنه. لطفاً از آپارات استفاده کن: <a href="https://www.aparat.com/embed/tfyj27b?data[rnddiv]=25643559690&data[responsive]=yes">لینک آپارات</a>
+                <source src="https://persian21.cdn.asset.aparat.com/aparat-video/ab75685d2a375a34a68f4fac0aa13d5666409867-360p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6ImVlYjIxZWQ3ODU4ZTFlNzVmZjg2YTk4YTU3YWIzNjJkIiwiZXhwIjoxNzU5NzU3NjQ1LCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.VWsHZuIyfXMynDl0OV_QF7pVbxSlk3V4Bj1-Cp3OWPs" type="video/mp4">
+                مرورگرت از ویدئو پشتیبانی نمی‌کنه. لطفاً لینک زیر رو امتحان کن: <a href="https://persian21.cdn.asset.aparat.com/aparat-video/ab75685d2a375a34a68f4fac0aa13d5666409867-360p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6ImVlYjIxZWQ3ODU4ZTFlNzVmZjg2YTk4YTU3YWIzNjJkIiwiZXhwIjoxNzU5NzU3NjQ1LCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.VWsHZuIyfXMynDl0OV_QF7pVbxSlk3V4Bj1-Cp3OWPs">لینک ویدئو</a>
             </video>
             <p class="mt-6 text-gray-600 max-w-2xl mx-auto">با پیوستن به دوره‌های جدید، از آموزش‌های تخصصی و به‌روز اساتید ما بهره‌مند شوید و گام بلندی به سوی موفقیت تحصیلی بردارید!</p>
         </div>
